Написан сырой код для работы с камерой

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">OpenMeters</string>
+
+    <string name="ok">Ок</string>
+    <string name="allow_camera_and_storage">Для использования камеры устройства необходимо дать разрешения</string>
 </resources>
