--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="ok">Ок</string>
     <string name="allow_camera_and_storage">Для использования камеры устройства необходимо дать разрешения</string>
+    <string name="meter_history">История показаний</string>
 </resources>
