Сделан экран всё готово и навигация по вкладке камеры

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="to_confirm">Подтвердить</string>
 
     <string name="left_arrow_button">Кнопка стрелки влево</string>
+    <string name="all_ready">Все готово!</string>
+    <string name="like">Палец вверх</string>
+    <string name="meters_was_sent_to_bank">Показания обработаны и отправлены в банк.</string>
+    <string name="go_to_history_of_meters">Перейти к истории показаний</string>
 </resources>
