Сделана выборка изображений из галереи, сделаны запросы на бэк с получением результата от нейронки и много чего ещё

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -16,7 +16,11 @@
     <string name="meters_was_sent_to_bank">Показания обработаны и отправлены в банк.</string>
     <string name="go_to_history_of_meters">Перейти к истории показаний</string>
     <string name="meter_processing_error">Счётчик не распознан</string>
-    
+
+    <string name="capture_button">Кнопка съёмки</string>
+    <string name="get_photo_button">Кнопка выбора изображения из галереи</string>
+    <string name="flashlight_button">Кнопка фонарика</string>
+
     <string name="could_not_recognize">Не удалось распознать</string>
     <string name="could_not_recognize_try_again">Не удалось распознать показание счетчика, повторите попытку или введите в ручную</string>
 </resources>
