--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="could_not_recognize">Не удалось распознать</string>
     <string name="could_not_recognize_try_again">Не удалось распознать показание счетчика, повторите попытку или введите в ручную</string>
 
+    <string name="profile">Профиль</string>
+    <string name="history">История показаний</string>
     <string name="error">Ошибка!</string>
     <string name="backend_error_happened">Произошла ошибка на стороне сервера. Попробуйте позднее</string>
+    <string name="section_in_progress">Раздел находится в разработке</string>
 </resources>
